--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sparklab",
+  "homepage": "https://smtekdev.github.io/spark",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +25,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+    
   },
   "eslintConfig": {
     "extends": [
